got interpolation working, still remaining issue with 3 servers